api-docs/v1/api-operations/methods/get-list-records-v1.0-account-domains-domainid-records.rst
.. _get-list-records-v1.0-account-domains-domainid-records:

List records
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. code::

    GET /v1.0/{account}/domains/{domainId}/records

Lists all records configured for the specified domain. SOA cannot be modified.

This call lists all records configured for the specified domain.

.. note::
   By default, returns a maximum of 100 items at a time if no ``limit`` is specified. To navigate the collection returned, the parameters ``limit`` and ``offset`` can be set in the URI (for example: ``limit=10 & offset=0`` ), as described at :rax-devdocs:`Pagination <cloud-dns/v1/developer-guide/#document-general-api-info/pagination>`.
   
This table shows the possible response codes for this operation:

+--------------------------+-------------------------+-------------------------+
|Response Code             |Name                     |Description              |
+==========================+=========================+=========================+
|200                       |Success                  |Request succeeded.       |
+--------------------------+-------------------------+-------------------------+
|400                       |Bad Request              |The request is missing   |
|                          |                         |one or more elements, or |
|                          |                         |the values of some       |
|                          |                         |elements are invalid.    |
+--------------------------+-------------------------+-------------------------+
|400 500                   |dnsFault                 |The DNS service has      |
|                          |                         |experienced a fault.     |
+--------------------------+-------------------------+-------------------------+
|401                       |Unauthorized             |You are not authorized   |
|                          |                         |to complete this         |
|                          |                         |operation. This error    |
|                          |                         |can occur if the request |
|                          |                         |is submitted with an     |
|                          |                         |invalid authentication   |
|                          |                         |token.                   |
+--------------------------+-------------------------+-------------------------+
|404                       |Not Found                |The requested item was   |
|                          |                         |not found.               |
+--------------------------+-------------------------+-------------------------+
|413                       |Over Limit               |The number of items      |
|                          |                         |returned is above the    |
|                          |                         |allowed limit.           |
+--------------------------+-------------------------+-------------------------+
|503                       |Service Unavailable      |The service is not       |
|                          |                         |available.               |
+--------------------------+-------------------------+-------------------------+

Request
""""""""""""""""

This table shows the header parameters for the request:

+--------------------------+-------------------------+-------------------------+
|Name                      |Type                     |Description              |
+==========================+=========================+=========================+
|X-Auth-Token              |String                   |Arbitrary character      |
|                          |                         |string generated by the  |
|                          |                         |authentication service   |
|                          |                         |in response to valid     |
|                          |                         |credentials.             |
+--------------------------+-------------------------+-------------------------+

This table shows the URI parameters for the request:

+--------------------------+-------------------------+-------------------------+
|Name                      |Type                     |Description              |
+==========================+=========================+=========================+
|{account}                 |String                   |The tenant ID.           |
+--------------------------+-------------------------+-------------------------+
|{domainId}                |String                   |ID for the domain.       |
+--------------------------+-------------------------+-------------------------+

This operation does not accept a request body.

**Example List records: XML request**

.. code::

   GET https://dns.api.rackspacecloud.com/v1.0/1234/domains/2725233/records
   Accept: application/xml
   X-Auth-Token: ea85e6ac-baff-4a6c-bf43-848020ea3812
   Content-Type: application/xml
   Content-Length: 0

**Example List records: JSON request**


.. code::

   GET https://dns.api.rackspacecloud.com/v1.0/1234/domains/2725233/records
   Accept: application/json
   X-Auth-Token: ea85e6ac-baff-4a6c-bf43-848020ea3812
   Content-Type: application/json
   Content-Length: 0

Response
""""""""""""""""

**Example List records: XML response**

.. code::

   Status: 200 OK
   Date: Thu, 28 Jul 2011 21:54:21 GMT
   X-API-VERSION: 1.0.17
   Content-Type: application/xml
   Content-Length: 1273
   
   <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
   <recordsList totalEntries="6" xmlns:ns2="http://www.w3.org/2005/Atom" xmlns="http://docs.rackspacecloud.com/dns/api/v1.0" xmlns:ns3="http://docs.rackspacecloud.com/dns/api/management/v1.0">
       <record id="A-6817754" type="A" name="ftp.example.com" data="192.0.2.8" ttl="5771" updated="2011-05-19T08:07:08-05:00" created="2011-05-18T14:53:09-05:00"/>
       <record id="A-6822994" type="A" name="example.com" data="192.0.2.17" ttl="86400" updated="2011-06-24T01:12:52Z" created="2011-06-24T01:12:52Z"/>
       <record id="NS-6251982" type="NS" name="example.com" data="dns1.stabletransit.com" ttl="3600" updated="2011-06-24T01:12:51Z" created="2011-06-24T01:12:51Z"/>
       <record id="NS-6251983" type="NS" name="example.com" data="dns2.stabletransit.com" ttl="3600" updated="2011-06-24T01:12:51Z" created="2011-06-24T01:12:51Z"/>
       <record id="MX-3151218" type="MX" name="example.com" data="mail.example.com" ttl="3600" priority="5" updated="2011-06-24T01:12:53Z" created="2011-06-24T01:12:53Z"/>
       <record id="CNAME-9778009" type="CNAME" name="www.example.com" data="example.com" ttl="5400" updated="2011-06-24T01:12:54Z" created="2011-06-24T01:12:54Z" comment="This is a comment on the CNAME record"/>
   </recordsList>
   
**Example List records: JSON response**

.. code::

   Status: 200 OK
   Date: Thu, 28 Jul 2011 21:54:21 GMT
   X-API-VERSION: 1.0.17
   Content-Type: application/json
   Content-Length: 1474
   
   {
     "totalEntries" : 6,
     "records" : [ {
       "name" : "ftp.example.com",
       "id" : "A-6817754",
       "type" : "A",
       "data" : "192.0.2.8",
       "updated" : "2011-05-19T13:07:08.000+0000",
       "ttl" : 5771,
       "created" : "2011-05-18T19:53:09.000+0000"
     }, {
       "name" : "example.com",
       "id" : "A-6822994",
       "type" : "A",
       "data" : "192.0.2.17",
       "updated" : "2011-06-24T01:12:52.000+0000",
       "ttl" : 86400,
       "created" : "2011-06-24T01:12:52.000+0000"
     }, {
       "name" : "example.com",
       "id" : "NS-6251982",
       "type" : "NS",
       "data" : "dns1.stabletransit.com",
       "updated" : "2011-06-24T01:12:51.000+0000",
       "ttl" : 3600,
       "created" : "2011-06-24T01:12:51.000+0000"
     }, {
       "name" : "example.com",
       "id" : "NS-6251983",
       "type" : "NS",
       "data" : "dns2.stabletransit.com",
       "updated" : "2011-06-24T01:12:51.000+0000",
       "ttl" : 3600,
       "created" : "2011-06-24T01:12:51.000+0000"
     }, {
       "name" : "example.com",
       "priority" : 5,
       "id" : "MX-3151218",
       "type" : "MX",
       "data" : "mail.example.com",
       "updated" : "2011-06-24T01:12:53.000+0000",
       "ttl" : 3600,
       "created" : "2011-06-24T01:12:53.000+0000"
     }, {
       "name" : "www.example.com",
       "id" : "CNAME-9778009",
       "type" : "CNAME",
       "comment" : "This is a comment on the CNAME record",
       "data" : "example.com",
       "updated" : "2011-06-24T01:12:54.000+0000",
       "ttl" : 5400,
       "created" : "2011-06-24T01:12:54.000+0000"
     } ]
   }




